--- a/templates/datarobot-appnode-template.yaml
+++ b/templates/datarobot-appnode-template.yaml
@@ -19,9 +19,12 @@ Parameters:
     Description: DataRobot version to install
     AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})'
     Default: 7.0.2
-  InstallationBucket:
+  QSInstallationBucket:
     Type: String
-    Description: CloudFormation repository S3 bucket name
+    Description: CloudFormation quickstart repository S3 bucket name
+  DRInstallationBucket:
+    Type: String
+    Description: DataRobot Installation Directory for Application Data 
   SSHKey:
     Type: "AWS::EC2::KeyPair::KeyName"
     Description: Key pair to use for connectivity
@@ -45,7 +48,7 @@ Parameters:
     Type: Number
     Description: Hard drive size for Operating System
     AllowedValues: [ 40, 60, 80, 100 ]
-    Default: 40
+    Default: 60
   DataVolumeSize:
     Type: Number
     Description: Hard drive size for the DataRobot software
@@ -104,8 +107,7 @@ Parameters:
   ClusterType:
     Type: String
     Description: Type of cluster to build.
-    AllowedValues: [ "SingleNode", "PoC", "PreProd", "QuickStart" ]
-    Default: "PreProd" 
+    Default: "QuickStart" 
   UseAutoScaling:
     Type: String
     Description: Enable the metricspublisher service to turn on AutoScaling
@@ -362,7 +364,7 @@ Resources:
                 ## Download the proper config file
                 type="$DR_VERSION-$CLUSTER_TYPE" 
                 echo "Creating for :> $type"
-                aws s3 cp s3://$S3_BUCKET/etc/$type-config.tmpl /opt/datarobot/DataRobot-$DR_VERSION/config.yaml
+                aws s3 cp s3://$S3QUICKSTART_BUCKET/templates/etc/$type-config.tmpl /opt/datarobot/DataRobot-$DR_VERSION/config.yaml
                 chown -R datarobot:datarobot /opt/datarobot/DataRobot-$DR_VERSION/config.yaml
                 echo "Downloaded Config file :> $(ls -la /opt/datarobot/DataRobot-$DR_VERSION/config.yaml)"
 
@@ -420,7 +422,8 @@ Resources:
                 FILE_STORAGE: !Ref StorageType
                 DR_VERSION: !Ref DRVersion
                 MAIN_STACK: !Ref MainStack
-                S3_BUCKET: !Ref InstallationBucket
+                S3_BUCKET: !Ref DRInstallationBucket
+                S3QUICKSTART_BUCKET: !Ref QSInstallationBucket
                 SECRETS: !Ref SecretsEnforced
                 STORAGE: !Ref StorageDir
                 USE_AUTOSCALING: !Ref UseAutoScaling
@@ -622,7 +625,7 @@ Resources:
               env:
                 DR_VERSION: !Ref DRVersion
                 BACKUP_DIR: !Ref BackupDir
-                S3_BUCKET: !Ref InstallationBucket
+                S3_BUCKET: !Ref DRInstallationBucket
 
             4f-SetNodeCrontabSet:
               command: !Sub |
@@ -644,7 +647,7 @@ Resources:
               env:
                DR_VERSION: !Ref DRVersion
                BACKUP_DIR: !Ref BackupDir
-               S3_BUCKET: !Ref InstallationBucket
+               S3_BUCKET: !Ref DRInstallationBucket
                SCHEDULE: !Ref S3BucketBackupSchedule
                USE_S3_BACKUPS: !Ref UseS3BucketBackups
 
@@ -760,7 +763,7 @@ Resources:
           DownloadURL=${DownloadURL}
           Encrypted=${Encrypted}
           # EncryptionKey=${EncryptionKey}
-          InstallationBucket=${InstallationBucket}
+          DRInstallationBucket=${DRInstallationBucket}
           BackupDir=${BackupDir}
           UseS3BucketBackups=${UseS3BucketBackups}
           S3BucketBackupSchedule=${S3BucketBackupSchedule}
