--- a/templates/datarobot-main-template.yaml
+++ b/templates/datarobot-main-template.yaml
@@ -13,14 +13,14 @@ Metadata:
   AWS::CloudFormation::Interface:
     ParameterGroups:
       - Label:
-          default: Network Configuration
+          default: Network / Install Configurations
         Parameters:
           - VPCID
           - PrivateSubnet1ID
           - PrivateSubnet2ID
           - PublicSubnet1ID
           - PublicSubnet2ID
-#          - RemoteAccessCIDR
+          - DRS3InstallationBucket
       - Label:
           default: Security Configuration
         Parameters:
@@ -40,8 +40,8 @@ Metadata:
         default: Private subnet 1 ID
       PrivateSubnet2ID:
         default: Private subnet 2 ID
-#      RemoteAccessCIDR:
-#        default: Allowed bastion external access CIDR
+      DRS3InstallationBucket:
+        default: Bucket Name for DR Install S3 Bucket
       VPCID:
         default: VPC ID  
       QSS3BucketName:
@@ -72,18 +72,20 @@ Parameters:
     Description: Name of an existing public/private key pair. If you do not have one in this AWS Region,
       please create it before continuing.
     Type: 'AWS::EC2::KeyPair::KeyName'
-#  RemoteAccessCIDR:
-#    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
-#    Type: String
-#    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/x
-#    Description: Allowed CIDR block for external SSH access to the bastions
+  DRS3InstallationBucket:
+    Default: datarobot-weswagner-quickstart-7.0.2-cloudformation
+    Description:
+      Name of the S3 bucket you want to install DataRobot into. It should not be public
+      and the account you are running the quickstart will need the ability to assigne
+      permissions for access to a role for EC2 instances.
+    Type: String
   QSS3BucketName:
     AllowedPattern: '^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$'
     ConstraintDescription:
       The Quick Start bucket name can include numbers, lowercase
       letters, uppercase letters, and hyphens (-). It cannot start or end with a 
       hyphen (-).
-    Default: aws-quickstart
+    Default: weswagner-quickstart-dr
     Description:
       Name of the S3 bucket for your copy of the Quick Start assets. 
       Keep the default name unless you are customizing the template. 
@@ -118,6 +120,7 @@ Parameters:
     Type: String
 
 
+
 Resources:
 #  BastionStack:
 #    Type: AWS::CloudFormation::Stack
@@ -144,7 +147,7 @@ Resources:
   SecurityStack:
     Type: AWS::CloudFormation::Stack
     Properties:
-      TimeoutInMinutes: 2
+      TimeoutInMinutes: 5
       TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/templates/datarobot-securitygroup-template.yaml
       Parameters:
         MainStack: !Ref AWS::StackName
@@ -156,32 +159,171 @@ Resources:
   IAMStack:
     Type: AWS::CloudFormation::Stack
     Properties:
-      TimeoutInMinutes: 5
+      TimeoutInMinutes: 10
       TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/templates/datarobot-iam-template.yaml
       Parameters:
         MainStack: !Ref AWS::StackName
-        S3Bucket: weswagner-quickstart-dr
+        S3Bucket: !Ref DRS3InstallationBucket
         
   AppNode:
     Type: AWS::CloudFormation::Stack
     Properties:
       TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/templates/datarobot-appnode-template.yaml
+      TimeoutInMinutes: 120
       Parameters:
         MainStack: !Ref AWS::StackName
         SubnetId: !Ref PrivateSubnet1ID
         Encrypted: false
         EncryptionKey: ' '
         SSHKey: !Ref KeyPairName
-        InstallationBucket: weswagner-quickstart-dr
+        QSInstallationBucket: weswagner-quickstart-dr
+        DRInstallationBucket: !Ref DRS3InstallationBucket
         ImageId: ami-01ca03df4a6012157
         DownloadURL: "https://datarobot-enterprise-releases.s3.amazonaws.com/promoted/7.0.2/dockerized/DataRobot-RELEASE-7.0.2.tar.gz?AWSAccessKeyId=AKIAQ6I23A22NIXIMKVW&Expires=1622488193&Signature=h6%2B0y3YTJx5P87DzE1FVl0mNgTQ%3D"
+      Tags:
+        - Key: Name
+          Value: !Sub ${AWS::StackName}-AppNode
+        - Key: MainStack
+          Value: !Ref AWS::StackName
+        - Key: NodeType
+          Value: DataRobot
     DependsOn: 
-      - SecurityStack
       - IAMStack    
+
+
+  DedicatedPredictionServerStack:
+    Type: "AWS::CloudFormation::Stack"
+    DependsOn: 
+      - IAMStack
+    Properties:
+      TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/templates/datarobot-node-template.yaml
+      Parameters:
+        DataVolumeSize: 100
+        ImageId: ami-01ca03df4a6012157
+        InstallationBucket: !Ref DRS3InstallationBucket
+        InstanceType: r5.xlarge
+        MainStack: !Ref AWS::StackName
+        SSHKey: !Ref KeyPairName
+        SubnetId: !Ref PrivateSubnet1ID
+        Encrypted: false
+        EncryptionKey: ' '
+      Tags:
+        # DataRobot tags
+        - Key: Name
+          Value: !Sub ${AWS::StackName}-DedicatedPredictionServer
+        - Key: MainStack
+          Value: !Ref AWS::StackName
+        - Key: NodeType
+          Value: DataRobot
+
+  ModelManagementStack:
+    Type: "AWS::CloudFormation::Stack"
+    DependsOn: 
+      - IAMStack
+    Properties:
+      TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/templates/datarobot-node-template.yaml
+      Parameters:
+        DataVolumeSize: 100
+        ImageId: ami-01ca03df4a6012157
+        InstallationBucket: !Ref DRS3InstallationBucket
+        InstanceType: r5.xlarge
+        MainStack: !Ref AWS::StackName
+        SSHKey: !Ref KeyPairName
+        SubnetId: !Ref PrivateSubnet1ID
+        Encrypted: false
+        EncryptionKey: ' '
+      Tags:
+        # DataRobot tags
+        - Key: Name
+          Value: !Sub ${AWS::StackName}-ModelManagement
+        - Key: MainStack
+          Value: !Ref AWS::StackName
+        - Key: NodeType
+          Value: DataRobot
+
+
+# Configured for 4 workers each, total of 8
+  ModelingNode1Stack:
+    Type: "AWS::CloudFormation::Stack"
+    DependsOn: 
+      - IAMStack
+    Properties:
+      TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/templates/datarobot-node-template.yaml
+      Parameters:
+        DataVolumeSize: 100
+        ImageId: ami-01ca03df4a6012157
+        InstallationBucket: !Ref DRS3InstallationBucket
+        InstanceType: r5.xlarge
+        MainStack: !Ref AWS::StackName
+        SSHKey: !Ref KeyPairName
+        SubnetId: !Ref PrivateSubnet1ID
+        Encrypted: false
+        EncryptionKey: ' '
+      Tags:
+        # DataRobot tags
+        - Key: Name
+          Value: !Sub ${AWS::StackName}-ModelingNode1
+        - Key: MainStack
+          Value: !Ref AWS::StackName
+        - Key: NodeType
+          Value: DataRobot
+
+  ModelingNode2Stack:
+    Type: "AWS::CloudFormation::Stack"
+    DependsOn: 
+      - IAMStack
+    Properties:
+      TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/templates/datarobot-node-template.yaml
+      Parameters:
+        DataVolumeSize: 100
+        ImageId: ami-01ca03df4a6012157
+        InstallationBucket: !Ref DRS3InstallationBucket
+        InstanceType: r5.xlarge
+        MainStack: !Ref AWS::StackName
+        SSHKey: !Ref KeyPairName
+        SubnetId: !Ref PrivateSubnet1ID
+        Encrypted: false
+        EncryptionKey: ' '
+      Tags:
+        # DataRobot tags
+        - Key: Name
+          Value: !Sub ${AWS::StackName}-ModelingNode2
+        - Key: MainStack
+          Value: !Ref AWS::StackName
+        - Key: NodeType
+          Value: DataRobot
+
+# Only for PreProd or Enterprise
+# Added to allow for AutoScaling, that when used provides upto 52 total workers
+  ModelingOnlyNodeStack:
+    Type: "AWS::CloudFormation::Stack"
+    DependsOn: 
+      - IAMStack
+    Properties:
+      TemplateURL: https://weswagner-quickstart-dr.s3.amazonaws.com/templates/datarobot-node-template.yaml
+      Parameters:
+        DataVolumeSize: 100
+        ImageId: ami-01ca03df4a6012157
+        InstallationBucket: !Ref DRS3InstallationBucket
+        InstanceType: r5.2xlarge
+        MainStack: !Ref AWS::StackName
+        SSHKey: !Ref KeyPairName
+        SubnetId: !Ref PrivateSubnet1ID
+        Encrypted: false
+        EncryptionKey: ' '
+      Tags:
+        # DataRobot tags
+        - Key: Name
+          Value: !Sub ${AWS::StackName}-ModelingOnlyNode
+        - Key: MainStack
+          Value: !Ref AWS::StackName
+        - Key: NodeType
+          Value: DataRobot  
+
 
 Outputs:
   MasterTemplate:
-    Description: A refrence to the created DB
+    Description: Master Template Complete
     Value: MasterTemplate
 
 
